# rable

./: .cargo-lint-extra.toml  .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic.rs
src/: ast.rs  context.rs  error.rs  format.rs  lexer.rs  lib.rs  parser.rs  python.rs  sexp.rs  token.rs
src/format/: compound.rs  formatter.rs  lists.rs  mod.rs  nodes.rs  redirects.rs  words.rs
src/lexer/: backtick_opaque_tests.rs  brace_expansion.rs  expansions.rs  heredoc.rs  mod.rs  operators.rs  quotes.rs  tests.rs  word_builder.rs  words.rs
src/parser/: arithmetic.rs  case_select.rs  compound.rs  conditional.rs  conditionals.rs  functions.rs  helpers.rs  lists.rs  loops.rs  mod.rs  redirects.rs  simple_command.rs  tests.rs  word_parts.rs
src/sexp/: ansi_c.rs  commands.rs  expansions.rs  mod.rs  redirects.rs  word.rs
tests/: benchmark.py  compare_tree_sitter.rs  fuzz.py  generate_oracle_tests.py  integration.rs  run_tests.py
tests/oracle/: ansi_c_escapes.tests  ansi_c_processing.tests  array_normalization.tests  bash_valid_divergences.tests  cmdsub_formatting.tests  heredoc_formatting.tests  locale_strings.tests  other.tests  procsub_formatting.tests  redirect_formatting.tests  top_level_separation.tests  word_boundaries.tests
tests/parable/: 01_words.tests  02_commands.tests  03_pipelines.tests  04_lists.tests  05_redirects.tests  06_compound.tests  07_if.tests  08_loops.tests  09_case.tests  10_functions.tests  (+26 more)
(+9 files in other folders)
