[package]
name = "rable"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mpecan/rable"
description = "A Rust implementation of the Parable bash parser — complete GNU Bash 5.3-compatible parsing with Python bindings"
keywords = ["bash", "parser", "shell", "ast", "pyo3"]
categories = ["parsing", "command-line-utilities", "development-tools"]
readme = false
rust-version = "1.93"

[dependencies]
thiserror = "2"
pyo3 = { version = "0.24", optional = true, features = ["extension-module"] }

[features]
default = []
python = ["pyo3"]

[lib]
name = "rable"
crate-type = ["lib", "cdylib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
